src/index.css
html, body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;

  position: relative;
  min-height: 100vh;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  text-rendering: optimizeLegibility;
  text-rendering: geometricPrecision;
  font-smooth: always;

  -webkit-font-smoothing: antialiased;
  -webkit-font-smoothing: subpixel-antialiased;

}

code {
  font-family: 'Roboto', sans-serif;

}


@media only screen and (max-width: 748px) {

  body, html {
    overflow-x: hidden;
    margin-left: 4px;
    margin-right: 4px;
    
}
}

